Поправить index.html, добавить конфиг ng build --prod

--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,20 @@
                         "styles": [
                             "src/material-theme.scss"
                         ]
-                    }
+                    },
+                    "configurations": {
+                        "production": {
+                          "optimization": true,
+                          "outputHashing": "all",
+                          "sourceMap": false,
+                          "extractCss": true,
+                          "namedChunks": false,
+                          "aot": true,
+                          "extractLicenses": true,
+                          "vendorChunk": false,
+                          "buildOptimizer": true
+                        }
+                      }
                 },
                 "serve": {
                     "builder": "@angular-devkit/build-angular:dev-server",
