--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "@angular/material": "~7.2.0",
         "@angular/platform-browser": "~7.1.4",
         "@angular/platform-browser-dynamic": "~7.1.4",
-        "zone.js": "~0.8.26"
+        "zone.js": "~0.8.26",
+        "web-animations-js": "~2.3.1"
     },
     "devDependencies": {
         "@angular/cli": "~7.1.3",
