--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "src/material-theme.scss"
+                            "src/styles.scss"
                         ]
                     },
                     "configurations": {
