Попытаться прикрутить виртуальный скроллинг

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "@angular/cdk": "~7.2.0",
+        "@angular/cdk-experimental": "~7.2.0",
         "@angular/forms": "~7.1.4",
         "@angular/animations": "~7.1.4",
         "@angular/core": "~7.1.4",
