--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@angular/material": "~7.2.0",
         "@angular/platform-browser": "~7.1.4",
         "@angular/platform-browser-dynamic": "~7.1.4",
+        "rxjs": "~6.3.3",
         "zone.js": "~0.8.26",
         "web-animations-js": "~2.3.1"
     },
